--- a/src/index.production.html
+++ b/src/index.production.html
@@ -6,7 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <title>title</title>
-    <base href="/">
+    <!-- history route 配置 <base href="/"> -->
 </head>
 <body>
 <div id="app"></div>
